<resources>
    <string name="app_name">Notes</string>
    <string name="nav_header_login_button">Login</string>
    <string name="nav_header_subtitle" translatable="false">e-mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_switch_view">Switch View</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_settings">Settings</string>

    <string name="hint_note_header">Theme</string>
    <string name="hint_note_body">Text</string>
    <string name="save_button_text">Save</string>
    <string name="new_note_button_description">new Note button</string>
    <string name="edit_bar_title">Edit</string>
    <string name="edit_context_title">Edit</string>
    <string name="delete_context_title">Delete</string>
    <string name="settings_fragment_message">This is settings fragment</string>

    <string name="delete_confirmation">Delete checked notes?</string>
    <string name="back_exit_confirmation">Press \"BACK\" again to exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_dialog">Delete dialog</string>
    <string name="delete_bar_title">Delete</string>
    <string name="delete_current_confirmation">Delete current note?</string>
    <string name="spinner">Color</string>
    <string name="settings_header_text_size">Header text size</string>
    <string name="settings_note_text_size">Note text size</string>
    <string name="settings_default_color">Default color for new Note</string>
    <string name="nav_header_logout_button">Logout</string>
</resources>