<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/spinner"
        android:orderInCategory="1"
        android:title="@string/spinner"
        app:actionViewClass="android.widget.Spinner"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_bar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="2"
        android:title="@string/delete_bar_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_bar"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="3"
        android:title="@string/edit_bar_title"
        android:visible="true"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_switch_view"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_switch_view"
        android:orderInCategory="4"
        android:visible="true"
        app:showAsAction="always" />

</menu>